    * added many new theme functions and refactored existing theme functions.
    * replaced theme "UnConeD" by "Chameleon".
- usability:
    * added breadcrumb navigation to all pages.
    * made it possible to add context-sensitive help to all pages.
    * replaced drop-down menus by radio buttons where appropriate.
    * removed the 'magic_quotes_gpc = 0' requirement.
- accessibility:
    * made themes degrade gracefully in absence of CSS.
    * grouped form elements using '<fieldset>' and '<legend>' tags.
    * added '<label>' tags to form elements.
- refactored 404 (file not found) handling to support custom 404 pages.
- documentation:
    * added PHPDoc/Doxygen comments.

Drupal 4.3.2, 2004-01-01
------------------------

- fixed bugs: no critical bugs were identified.


Drupal 4.3.1, 2003-12-01
------------------------

- fixed bugs: no critical bugs were identified.


Drupal 4.3.0, 2003-11-01
------------------------

- added support for configurable URLs.
- added support for sortable table columns.
- database backend:
    * added support for selective database table prefixing.
- performance:
    * optimized many SQL queries for speed by converting left joins to inner joins.
- comment module:
    * rewrote the comment housekeeping code to be much more efficient and scalable.
    * changed the comment module to use the standard pager.
- user module:
    * added support for multiple sessions per user.
    * added support for anonymous user sessions.
- forum module:
    * improved the forum views and the themability thereof.
- book module:
    * improved integration of non-book nodes in the book outline.
- usability:
    * added support for "mass node operations" to ease repetitive tasks.
    * added support for breadcrumb navigation to several modules' user pages.
    * integrated the administration pages with the normal user pages.

Drupal 4.2.0, 2003-08-01
------------------------

- added support for clean URLs.